--- a/configloader/testdata/test_config-override.yaml
+++ b/configloader/testdata/test_config-override.yaml
@@ -5,4 +5,4 @@ audit:
   max_age_days: 99
   max_size_mb: 99
 
-client_api_key: secret://secret2/api-key2
+client_api_key: secret://secret2-${ENVIRONMENT}/api-key2-${ENVIRONMENT}
