--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,16 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+    groups:
+      es:
+        patterns:
+          - effective-security*
+      go:
+        patterns:
+          - golang.org*
+      google:
+        patterns:
+          - google.golang.org*
   # Enable version updates for Actions
   - package-ecosystem: "github-actions"
     directory: "/" # Location of package manifests
