--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -73,6 +73,8 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Fetch History
+        run: git fetch --prune --unshallow
 
       - name: Setup Go
         uses: actions/setup-go@v5
