--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -114,6 +114,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           paths: '[".VERSION"]'
+          skip_after_successful_duplicate: false
           paths_filter: |
             version:
               paths:
